Fixed some layout issues with dashboard=true

--- a/slickij-war/src/main/webapp/css/style/style.css
+++ b/slickij-war/src/main/webapp/css/style/style.css
@@ -1613,10 +1613,10 @@ span.log-level-TRACE {
 }
 
 h2.subtitle-left,h2.subtitle-right {
-    font-size: 2.5em;
+    font-size: 2em;
 }
 h3.subtitle-left,h3.subtitle-right {
-    font-size: 2.1em;
+    font-size: 1.8em;
 }
 h5.subtitle-left,h5.subtitle-right {
     font-size: 1.2em;
